# CloudSync-test

./: .gitignore  README.md  cloudsync.yaml  pyproject.toml  setup.py
configs/: example.yaml  test.yaml
reports/: PHASE1_REPORT.md  README.md
src/cloudsync/: __init__.py  changelog.py  cli.py  config.py  hasher.py  logger.py  scheduler.py  syncer.py  watcher.py
tests/: __init__.py  test_config.py  test_syncer.py  test_watcher.py
